compiler/test-data/parser/errors/blueprint/param_missing_type.frel
module test

blueprint Greeting(name) {
    text { name }
}
